# booker

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: deb.yaml
src/: config.rs  constants.rs  is_day_off.rs  main.rs  seater.rs  timer.rs
